--- a/MKR1000_PushOver/ReadMe.adoc
+++ b/MKR1000_PushOver/ReadMe.adoc
@@ -19,7 +19,7 @@ For example:
 
 == Step 2: Assemble the circuit
 
-Assemble the circuit following the diagram layout.png attached to the sketch
+Nothing to assemble
 
 == Step 3: Load the code
 
@@ -28,11 +28,9 @@ Upload the code contained in this sketch on to your board
 === Folder structure
 
 ....
- sketch123                => Arduino sketch folder
-  ├── sketch123.ino       => main Arduino file
-  ├── schematics.png      => (optional) an image of the required schematics
-  ├── layout.png          => (optional) an image of the layout
-  └── ReadMe.adoc         => this file
+ MKR1000_PushOver               => Arduino sketch folder
+  ├── MKR1000_PushOver.ino      => main Arduino file
+  └── ReadMe.adoc               => this file
 ....
 
 === License
