--- a/MKR1000_MQTT_Test/ReadMe.adoc
+++ b/MKR1000_MQTT_Test/ReadMe.adoc
@@ -42,15 +42,7 @@ This project is released under a {License} License.
 To contribute to this project please contact ckuehnel <info@ckuehnel.ch>
 
 === BOM
-Add the bill of the materials you need for this project.
-
-|===
-| ID | Part name      | Part number | Quantity
-| R1 | 10k Resistor   | 1234-abcd   | 10       
-| L1 | Red LED        | 2345-asdf   | 5        
-| A1 | Arduino Zero   | ABX00066    | 1        
-|===
-
+There is no BOM
 
 === Help
 This document is written in the _AsciiDoc_ format, a markup language to describe documents. 
